src/styles/Header.module.scss
@import "_constants.scss";

.header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 1rem;
    z-index: 1;
    .headerTop {
        .logo {
            a {
                color: $grey;
            }
        }
    }
    .navigation {
        li {
            * {
                color: $grey;
                text-decoration: none;
            }
            list-style: none;
            font-size: 0.8rem;
        }
        
        li:hover {
                text-decoration: underline;
        }

        .active {
            text-decoration: underline;
        }
    }
}

.header.home {
    position: absolute;
    width: 100%;
    .logo {
        color: white;
    }
    .navigation {
        li {
            * {
                color: white;
            }
        }
    }
    nav.navigation.desktop{
        ul {
            li {
                ul {
                    li {
                        border-color: white;
                    }
                }
            }
        }
    }
}

nav.navigation.desktop {
    display: none;
    flex: 1;
    max-width: 600px;
    margin-right: 5rem;
    ul {
        display: flex;
        justify-content: space-between;
        flex: 1;
        li {
            ul {
                position: absolute;
                display: flex;
                transition: all 0.3s;
                position: absolute;
                flex-direction: column;
                visibility: hidden;
                opacity: 0;
                margin: 1rem 0;

                li {
                    border: solid $grey 1px;
                    margin: 0;
                    padding: 0.5rem 1rem;
                }
            }
        }
        
        li:hover {
            ul {
                visibility: visible;
                opacity: 1;
            }
        ul:hover {
            display: flex;
            }
        }
    }
}

.navigation.mobile {
    display: flex;
    flex-direction: column;
    ul {
        flex-direction: column;
    }
    .displayNavigation {
        display: flex;
    }
    .hideNavigation {
        display: none;
    }
}

.headerTop {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around; 
}

.show {
    display: flex;
}

.hide {
    display: none;
}

@media (min-width: 769px) {
    .menuIcon {
        display: none;
    }
    .header {
        flex-direction: row;
    }
    nav.navigation.mobile {
        display: none;
    }
    nav.navigation.desktop {
        display: block;
    }
}

